[project]
name = "fastapi-tutorial-freecodecamp"
version = "0.1.0"
description = ""
authors = [
    {name = "detayotella",email = "tellaadetayo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (==1.4.46)",
    "passlib (>=1.7.4)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.0.1)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
